--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,19 +29,19 @@ jobs:
               run: |
                 echo "${{secrets.ENV}}" >> .env
             - name: build docker
-              run: docker build -t muhammadarifmartadinata12/latihan:1.0.0 .
+              run: docker build -t ilhanmansiz/latihan:1.0.0 .
             - name: docker hub login
               uses: docker/login-action@v1
               with: 
                 username: ${{secrets.DOCKER_USER}}
                 password: ${{secrets.DOCKER_TOKEN}}
             - name: push image
-              run: docker push muhammadarifmartadinata12/latihan:1.0.0
+              run: docker push ilhanmansiz/latihan:1.0.0
     deploy:
       needs: build-and-push-docker
       runs-on: ubuntu-latest
       env:
-        IMAGE_URI: 'muhammadarifmartadinata12/latihan:1.0.0'
+        IMAGE_URI: 'ilhanmansiz/latihan:1.0.0'
         EC2_HOST: ${{ secrets.EC2_HOST }}
         EC2_USER: ${{ secrets.EC2_USER }}
 
